--- a/vercel.json
+++ b/vercel.json
@@ -49,7 +49,7 @@
   ],
   "headers": [
     {
-      "source": "/(.)",
+      "source": "/(.*)",
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
@@ -61,6 +61,15 @@
         }
       ]
     }
-  ]
+  ],
+  "dependencies": {
+    "axios": "^1.4.0",
+    "express": "^4.18.2",
+    "network": "^0.6.1",
+    "node-wmi": "^0.0.5",
+    "ping": "^0.4.4",
+    "si": "^2.0.0",
+    "systeminformation": "^5.17.12",
+    "xlsx": "^0.18.5"
+  }
 }
-
