--- a/vercel.json
+++ b/vercel.json
@@ -1,62 +1,12 @@
 {
-  "functions": {
-    "api/system-info": {
-      "runtime": "nodejs14"
-    },
-    "api/network-info": {
-      "runtime": "nodejs14"
-    },
-    "api/ping": {
-      "runtime": "nodejs14"
-    }
-  },
-  "rewrites": [
-    {
-      "source": "/fastest-urls",
-      "destination": "/api/fastest-urls"
-    },
-    {
-      "source": "/checkUrls",
-      "destination": "/api/checkUrls"
-    },
-    {
-      "source": "/api/system-info",
-      "destination": "/api/system-info"
-    },
-    {
-      "source": "/api/network-info",
-      "destination": "/api/network-info"
-    },
-    {
-      "source": "/api/ping",
-      "destination": "/api/ping"
-    },
-    {
-      "source": "/api/fastest-urls",
-      "destination": "/api/fastest-urls"
-    },
-    {
-      "source": "/api/checkUrls",
-      "destination": "/api/checkUrls"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/$1"
-    }
+  "version": 2,
+  "builds": [
+    { "src": "server.js", "use": "@vercel/node" }
   ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "*"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Origin, X-Requested-With, Content-Type, Accept"
-        }
-      ]
-    }
-  ],
+  "routes": [
+    { "src": "/fastest-urls", "dest": "/api/fastest-urls" },
+    { "src": "/checkUrls", "dest": "/api/checkUrls" },
+    { "src": "/api/.*", "dest": "/api/server.js" },
+    { "src": "/(.*)", "dest": "/server.js" }
+  ]
 }
