--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,41 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "server.js", "use": "@vercel/node" }
+  "functions": {
+    "api/fastest-urls": {
+      "runtime": "nodejs14"
+    },
+    "api/checkUrls": {
+      "runtime": "nodejs14"
+    },
+    "api/system-info": {
+      "runtime": "nodejs14"
+    },
+    "api/network-info": {
+      "runtime": "nodejs14"
+    },
+    "api/ping": {
+      "runtime": "nodejs14"
+    }
+  },
+  "rewrites": [
+    { "source": "/fastest-urls", "destination": "/api/fastest-urls" },
+    { "source": "/checkUrls", "destination": "/api/checkUrls" },
+    { "source": "/api/system-info", "destination": "/api/system-info" },
+    { "source": "/api/network-info", "destination": "/api/network-info" },
+    { "source": "/api/ping", "destination": "/api/ping" },
+    { "source": "/api/fastest-urls", "destination": "/api/fastest-urls" },
+    { "source": "/api/checkUrls", "destination": "/api/checkUrls" },
+    { "source": "/(.*)", "destination": "/$1" }
   ],
-  "routes": [
-    { "src": "/fastest-urls", "dest": "/api/fastest-urls" },
-    { "src": "/checkUrls", "dest": "/api/checkUrls" },
-    { "src": "/api/.*", "dest": "/api/server.js" },
-    { "src": "/(.*)", "dest": "/server.js" }
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        { "key": "Access-Control-Allow-Origin", "value": "*" },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Origin, X-Requested-With, Content-Type, Accept"
+        }
+      ]
+    }
   ]
 }
