--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,10 @@
 {
+  "version": 2,
+  "builds": [
+    { "src": "server.js", "use": "@vercel/node" }
+  ]
+},
+{
   "functions": {
     "api/fastest-urls": {
       "runtime": "nodejs14"
