--- a/vercel.json
+++ b/vercel.json
@@ -1,47 +1,16 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "server.js", "use": "@vercel/node" }
-  ]
-},
-{
-  "functions": {
-    "api/fastest-urls": {
-      "runtime": "nodejs14"
-    },
-    "api/checkUrls": {
-      "runtime": "nodejs14"
-    },
-    "api/system-info": {
-      "runtime": "nodejs14"
-    },
-    "api/network-info": {
-      "runtime": "nodejs14"
-    },
-    "api/ping": {
-      "runtime": "nodejs14"
+    "routes": [
+      { "src": "/api/system-info", "dest": "/api/system-info" },
+      { "src": "/api/network-info", "dest": "/api/network-info" },
+      { "src": "/api/ping", "dest": "/api/ping" },
+      { "src": "/checkUrls", "dest": "/checkUrls" },
+      { "src": "/fastest-urls", "dest": "/fastest-urls" }
+    ],
+    "build": {
+      "env": {
+        "NODE_VERSION": "14.17.0"
+      },
+      "command": "npm run start"
     }
-  },
-  "rewrites": [
-    { "source": "/fastest-urls", "destination": "/api/fastest-urls" },
-    { "source": "/checkUrls", "destination": "/api/checkUrls" },
-    { "source": "/api/system-info", "destination": "/api/system-info" },
-    { "source": "/api/network-info", "destination": "/api/network-info" },
-    { "source": "/api/ping", "destination": "/api/ping" },
-    { "source": "/api/fastest-urls", "destination": "/api/fastest-urls" },
-    { "source": "/api/checkUrls", "destination": "/api/checkUrls" },
-    { "source": "/(.*)", "destination": "/$1" }
-  ],
-  "headers": [
-    {
-      "source": "/(.*)",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin", "value": "*" },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "Origin, X-Requested-With, Content-Type, Accept"
-        }
-      ]
-    }
-  ]
-}
+  }
+  
